Changelog for Babel.

Babel 3.0.0-dev
=====================================
- [#145] bugfixed unlinking unsync TVs
- added options to link to specific resource or all resources
- [#144] added options to unlink to specific resource or all resources
- [#123] Minor cosmetic update
- [#139][#140] Fixed Unable to link translations by searching by pagetitle
- fixed resource title's width
- added config to set table's height
- added styling to align table in CMP
- initialized PSR-2 coding standard https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-2-coding-style-guide.md

Babel 3.0.0-rc1 (April 15, 2016)
=====================================
- added Custom Manager Page for resources matrix, supported by Steven Morgan of Waterlogic

Babel 3.0.0-beta5 (March 22, 2016)
=====================================
- updated plugin to ignore menu if the current context key is not included "babel.contextKeys" in System Settings
- changed empty item on combobox
- changed link & unlink logics, no reset whatsoever
- [#103] Added mouseover action on babel's button to show menu
- [#66] fixed moving resource to another context
- [#107] Replaced contextKey with cultureKey on drop down selection
- [#114] Fixed context on linking
- [#115] BabelLinks: Add &language Parameter
- [#110] Updated dutch lexicon

Babel 3.0.0-beta4 (March 25, 2015)
=====================================
- [#105] add &ignoreSiteStatus option to ignore site_status (when the site is offline)
- [#108] fix context's link then there's no translation on &includeUnlinked=`1` option
- [#106] fix resource selection when selecting empty text (&nbsp;)

Babel 3.0.0-beta3 (February 14, 2015)
=====================================
- [#101] fix BabelTranslation
- [#100] add optional typeahead combo of pagetitle on searching new link
- [#99] Polish translation

Babel 3.0.0-beta2 (December 2, 2014)
====================================
- remove "q" and "cultureKey" url parameters on BabelLinks