@@ -1,0 +1,3 @@
+[submodule "iana-language-subtag-registry"]
+    path = core/components/babel/vendor/iana-language-subtag-registry
+    url = git@github.com:goldsky/IANA-s-Language-Subtag-Registry.git
