@@ -56,41 +56,6 @@ $_lang['babel.open'] = 'Open';
 $_lang['babel.please_wait'] = 'Please wait...';
 $_lang['babel.sync_linked_tranlations'] = 'Synchronize all translations from the target';
 
-/* language names */
-$_lang['babel.language_ar'] = 'Arabic';
-$_lang['babel.language_bg'] = 'Bulgarian';
-$_lang['babel.language_ca'] = 'Catalan';
-$_lang['babel.language_cs'] = 'Czech';
-$_lang['babel.language_da'] = 'Danish';
-$_lang['babel.language_de'] = 'German';
-$_lang['babel.language_en'] = 'English';
-$_lang['babel.language_es'] = 'Spanish';
-$_lang['babel.language_fa'] = 'Persian';
-$_lang['babel.language_fi'] = 'Finnish';
-$_lang['babel.language_fr'] = 'French';
-$_lang['babel.language_he'] = 'Hebrew';
-$_lang['babel.language_hu'] = 'Hungarian';
-$_lang['babel.language_id'] = 'Indonesian';
-$_lang['babel.language_it'] = 'Italian';
-$_lang['babel.language_ja'] = 'Japanese';
-$_lang['babel.language_ko'] = 'Korean';
-$_lang['babel.language_lt'] = 'Lithuanian';
-$_lang['babel.language_ms'] = 'Malay';
-$_lang['babel.language_nl'] = 'Dutch';
-$_lang['babel.language_no'] = 'Norwegian (Bokmål)';
-$_lang['babel.language_pl'] = 'Polish';
-$_lang['babel.language_pt'] = 'Portuguese';
-$_lang['babel.language_ro'] = 'Romanian';
-$_lang['babel.language_ru'] = 'Russian';
-$_lang['babel.language_sk'] = 'Slovak';
-$_lang['babel.language_sl'] = 'Slovenian';
-$_lang['babel.language_sr'] = 'Serbian';
-$_lang['babel.language_sv'] = 'Swedish';
-$_lang['babel.language_tr'] = 'Turkish';
-$_lang['babel.language_uk'] = 'Ukrainian';
-$_lang['babel.language_vi'] = 'Vietnamese';
-$_lang['babel.language_zh'] = 'Chinese';
-
 /* error messages */
 $_lang['error.invalid_context_key'] = '[[+context]] is no valid context key.';
 $_lang['error.invalid_resource_id'] = '[[+resource]] is no valid resource id.';
