@@ -2,6 +2,7 @@ Changelog for Babel.
 
 Babel 3.0.0-dev
 =====================================
+- [#147] Initiated language code standard using IANA's Language Subtag Registry
 - [#145] bugfixed unlinking unsync TVs
 - added options to link to specific resource or all resources
 - [#144] added options to unlink to specific resource or all resources
